--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@wsrpc/client": "^4.3.1",
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
+    "mobile-device-detect": "^0.3.3",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
