--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.4.3",
     "mobile-device-detect": "^0.3.3",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
